--- a/sass/custom.scss
+++ b/sass/custom.scss
@@ -13,6 +13,8 @@ $info: darken(gray, 10%);
 //     "dark": #212121
 // );
 $link-decoration: none;
+// change link color on active
+
 $btn-border-radius: 0px;
 $btn-border-radius-lg:5px;
 
@@ -24,6 +26,7 @@ $accordion-button-bg: lightgrey;
 $accordion-button-active-bg: $secondary;
 $accordion-bg: $secondary;
 
+$navbar-toggler-focus-width: 0px;
 //import bootstrap
 @import "../node_modules/bootstrap/scss/bootstrap";
 
@@ -54,8 +57,12 @@ $accordion-bg: $secondary;
 .card-img-top{
     border-radius: 0%;
     width: 100%;
-    height: 10vw;
+    height: 13vw;
     object-fit: cover;
+}
+.fw-xxl{
+    font-size:3vw;
+    font-weight: 700;
 }
 .thic{
     border-width: .4em;
@@ -88,10 +95,7 @@ $accordion-bg: $secondary;
 .carousel-caption{
     bottom: 30%;
 }
-.fw-xxl{
-    font-size: 3rem;
-    font-weight: 700;
-}
+
 .palace-bg{
     background-image: url(/ref/palace.png);
     background-size: cover;
@@ -103,9 +107,12 @@ $accordion-bg: $secondary;
 .bot-but{
     margin-top: 3em;
     background-color: $primary;
-    width: 90px;
+    width: 95px;
     height: 90px;
     rotate: 45deg;
+}
+.navbar-toggler{
+    border: 0px;
 }
 .btn-trans-light {
     --bs-btn-font-weight: 700;
@@ -187,4 +194,52 @@ $accordion-bg: $secondary;
 	bottom: -40px;
 	border: 20px solid;
 	border-color: white white transparent transparent;
+}
+
+@media screen and (max-width: 600px) {
+    .fw-xxl{
+        font-size: 1.5rem;
+        font-weight: 700;
+    }
+    .btn,.nb{
+        font-size: .7rem;
+        padding: 5px !important;
+        margin:1% !important;
+    }
+    .carousel-caption{
+        bottom: 10%;
+    }
+    .h-icon {  
+        padding: 4px 6px !important;
+        margin: 4px !important;
+        color: white;
+        font-size: .7rem;
+    }   
+    .res-none{
+        display: none;
+    }
+    .nav-burger{
+        display: block;
+    }
+    .fa-stack.fa-2x{
+        font-size: 1.3rem;
+    }
+    .fa-stack.fa-6x{
+        font-size: 3rem;
+    }
+    .p-5{
+        padding: 1.5rem !important;
+    }
+    #find{
+        justify-content: start !important;
+    }
+    .card-img-top{
+        height: 20vh;
+    }
+}
+@media (max-width: 600px) {
+    .navbar-expand-md {
+        flex-wrap: nowrap;
+        justify-content: flex-start;
+    }
 }
