--- a/sass/custom.scss
+++ b/sass/custom.scss
@@ -97,7 +97,7 @@ $navbar-toggler-focus-width: 0px;
 }
 
 .palace-bg{
-    background-image: url(/ref/palace.png);
+    background-image: url(./ref/palace.png);
     background-size: cover;
     background-position: center;
 }
